# TNT-Language-server

./: .gitignore  CHANGELOG.md  README.md  install.sh  tnt-language-server.cabal
app/: Main.hs
app/TLS/: Computer.hs  Instr.hs  Parser.hs  Types.hs
lib/TLS/: Computer.hs  Errors.hs  Instr.hs  Parser.hs  Tokenizer.hs  Types.hs
tests/: InstrSpec.hs  Test.hs
