cabal-version:      2.4
name:               tnt-language-server
version:            0.1.0.0
synopsis:           A TNT proof assistant and LSP server

author:             Alice Laroche
maintainer:         aliceetampes@gmail.com
license:            Apache-2.0

extra-source-files: CHANGELOG.md

executable tnt-language-server
    other-modules:    TLS.Computer
                    , TLS.Instr
                    , TLS.Parser
                    , TLS.Tokenizer
                    , TLS.Types
    main-is:          Main.hs
    build-depends:    base       ^>= 4.14.1.0
                    , lsp        ^>= 1.2.0.0
                    , lsp-types  ^>= 1.2.0.0
                    , text       ^>= 1.2.4.1
                    , mtl        ^>= 2.2.2
                    , stm        ^>= 2.5.0.0
                    , lens       ^>= 5.0.1
                    , containers ^>= 0.6.2.1
                    , parsec     ^>= 3.1.14.0
                    , aeson      ^>= 1.5.6.0
    hs-source-dirs:   app
    default-language: Haskell2010