cabal-version:      2.4
name:               tnt-language-server
version:            0.4.0.0
synopsis:           A TNT proof assistant and LSP server

author:             Alice Laroche
maintainer:         aliceetampes@gmail.com
license:            Apache-2.0

extra-source-files: CHANGELOG.md

common deps
    build-depends:    base   ^>= 4.14.1.0
                    , text   ^>= 1.2.4.1
                    , parsec ^>= 3.1.14.0
                    , lsp-types  ^>= 1.2.0.0
                    , containers ^>= 0.6.2.1
                    , aeson      ^>= 1.5.6.0

library tls
    import:           deps
    exposed-modules:  TLS.Computer
                    , TLS.Instr
                    , TLS.Parser
                    , TLS.Tokenizer
                    , TLS.Types 
                    , TLS.Errors
    hs-source-dirs:   lib
    default-language: Haskell2010

executable tnt-language-server
    import:           deps
    main-is:          Main.hs
    build-depends:    lsp  ^>= 1.2.0.0
                    , mtl  ^>= 2.2.2
                    , stm  ^>= 2.5.0.0
                    , lens ^>= 5.0.1
                    , tls
    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite tests
    import:           deps
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    other-modules:    InstrSpec
    build-depends:    Cabal  >= 2.4
                    , HUnit ^>= 1.6.2.0
                    , tls
    hs-source-dirs:   tests
    default-language: Haskell2010
    